# alignment-based-learning

./: INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
doc/: Makefile  Makefile.am  Makefile.in  abl_refguide.ps
src/: Makefile  Makefile.am  Makefile.in  align.cpp  all_alignment.h  cluster.cpp  constituent.cpp  constituent.h  edit_distance.h  edit_operations.h  nonterminal.cpp  nonterminal.h  select.cpp  sentence.cpp  sentence.h  suffixtree.cpp  suffixtree.h  tools.h  tree.cpp  tree.h  treebank.cpp  treebank.h  wagner_fisher.h  word.cpp  word.h
src/.deps/: align.Po  cluster.Po  constituent.Po  nonterminal.Po  select.Po  sentence.Po  suffixtree.Po  tree.Po  treebank.Po  word.Po
utils/: abl_a2g2.pl  abl_remove_empty.pl
