AM_CXXFLAGS = -g -Wall -fpermissive -ffast-math -fno-inline
bin_PROGRAMS = abl_align abl_select abl_cluster
abl_align_SOURCES = align.cpp \
                all_alignment.h \
                constituent.h \
                constituent.cpp \
                edit_distance.h \
                edit_operations.h \
                nonterminal.h \
                nonterminal.cpp \
                sentence.h \
                sentence.cpp \
                tools.h \
                tree.h \
                tree.cpp \
                suffixtree.h \
                suffixtree.cpp \
                treebank.h \
                treebank.cpp \
                wagner_fisher.h \
                word.h \
                word.cpp
abl_select_SOURCES = select.cpp \
                constituent.h \
                constituent.cpp \
                nonterminal.h \
                nonterminal.cpp \
                sentence.h \
                sentence.cpp \
                tools.h \
                tree.h \
                tree.cpp \
                treebank.h \
                treebank.cpp \
                word.h \
                word.cpp
abl_cluster_SOURCES = cluster.cpp \
                constituent.h \
                constituent.cpp \
                nonterminal.h \
                nonterminal.cpp \
                sentence.h \
                sentence.cpp \
                tools.h \
                tree.h \
                tree.cpp \
                treebank.h \
                treebank.cpp \
                word.h \
                word.cpp

# $Id: Makefile.am 3755 2010-02-19 11:23:46Z menno $
